--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.compression.enabled=true
 
 logging.file.path=logs
 logging.file.name=logs/system-slam-web.log
-logging.file.max-size=20MB
+logging.logback.rollingpolicy.max-file-size=20MB
 
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
